diesel_compile_tests/tests/fail/numeric_ops_require_numeric_column.stderr
error[E0369]: cannot add `columns::name` to `columns::name`
  --> tests/fail/numeric_ops_require_numeric_column.rs:15:31
   |
15 |     let _ = users.select(name + name);
   |                          ---- ^ ---- columns::name
   |                          |
   |                          columns::name
   |
note: an implementation of `std::ops::Add` might be missing for `columns::name`
  --> tests/fail/numeric_ops_require_numeric_column.rs:8:9
   |
8  |         name -> VarChar,
   |         ^^^^ must implement `std::ops::Add`
note: the trait `std::ops::Add` must be implemented
  --> /rustc/3223b0b5e8dadda3f76c3fd1a8d6c5addc09599e/library/core/src/ops/arith.rs:76:1
